produto loja/ imagem/ test unit

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -2,6 +2,8 @@ FROM node:20.11.1-alpine
 
 RUN apk --update add --no-cache bash
 
+RUN apk add chromium
+
 RUN npm install -g npm@10.5.1
 
 RUN npm install -g @angular/cli@17.3.2
@@ -9,5 +11,7 @@ RUN npm install -g @angular/cli@17.3.2
 USER node
 
 WORKDIR /home/node/app
+
+ENV CHROME_BIN=/usr/bin/chromium-browser
 
 COPY . .
